feat(): eo-dropdown-actions
Closes NEXT_BUILDER-3797

--- a/bricks/basic/src/menu-item/menuItem.shadow.css
+++ b/bricks/basic/src/menu-item/menuItem.shadow.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-items: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .menu-item.disabled {
@@ -19,5 +20,4 @@
 
 .menu-item-icon {
   margin-right: 4px;
-  line-height: 1em;
 }
