--- a/bricks/basic/src/link/link.shadow.css
+++ b/bricks/basic/src/link/link.shadow.css
@@ -1,3 +1,11 @@
+:host {
+  display: inline-block;
+}
+
+:host([hidden]) {
+  display: none;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
