--- a/bricks/basic/src/data-providers/show-notification/notification.module.css
+++ b/bricks/basic/src/data-providers/show-notification/notification.module.css
@@ -48,3 +48,15 @@
 .notification[variant="warning"]::part(icon) {
   color: var(--palette-amber-6);
 }
+
+.topRight::part(base) {
+  width: 28rem;
+  margin-right: 16px;
+}
+.rectAngle::part(base) {
+  border-radius: 0px;
+}
+.title {
+  font-size: 16px;
+  color: var(--antd-heading-color);
+}
