--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -16,6 +16,11 @@ eo-icon {
   line-height: 0.25em;
 }
 
+eo-link {
+  width: 100%;
+  height: 100%;
+}
+
 .card-wrapper {
   position: relative;
   background: var(--card-item-bg);
@@ -24,6 +29,7 @@ eo-icon {
   transition: var(--card-transition);
   overflow: hidden;
   cursor: pointer;
+  height: 100%;
 }
 
 .card-wrapper:hover {
