--- a/bricks/containers/src/drawer/drawer.shadow.css
+++ b/bricks/containers/src/drawer/drawer.shadow.css
@@ -59,6 +59,7 @@
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -124,6 +125,12 @@
   justify-content: space-between;
   padding: 16px 24px;
   border-bottom: 1px solid var(--palette-gray-4);
+}
+
+.drawer-header-left,
+.drawer-header-right {
+  display: flex;
+  align-items: center;
 }
 
 .close-btn {
