--- a/bricks/containers/src/tab/tab-item/tab-item.shadow.css
+++ b/bricks/containers/src/tab/tab-item/tab-item.shadow.css
@@ -28,7 +28,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: -1px;
+  bottom: 0;
   left: 0;
   border-radius: 2px 2px 0 0;
   background-color: var(--antd-tabs-title-selected-color);
@@ -37,4 +37,20 @@
 .tab-item.disabled {
   color: var(--antd-tabs-title-disabled-color);
   cursor: not-allowed;
+}
+
+.tab-item.panel {
+  padding: 4px 20px;
+  border-right: 1px solid var(--antd-tabs-title-border-color);
+  border-top: 1px solid var(--antd-tabs-title-border-color);
+}
+
+.tab-item.panel[aria-selected="true"] {
+  border-top: none;
+  border-bottom: 1px solid var(--antd-tabs-title-wrapper-bg);
+}
+
+.tab-item.panel[aria-selected="true"]:after {
+  top: 0;
+  bottom: auto;
 }
