--- a/bricks/presentational/src/counter-badge/styles.shadow.css
+++ b/bricks/presentational/src/counter-badge/styles.shadow.css
@@ -42,3 +42,13 @@
   padding: 0;
   transform: translate(100%, 0);
 }
+
+.badgeContainer.noContent {
+  display: block;
+}
+
+.badgeContainer.noContent .countContent {
+  position: relative;
+  vertical-align: middle;
+  transform: none;
+}
