feat(): 页面模板迭代一验收问题
Closes NEXT_BUILDER-3838

--- a/bricks/basic/src/dropdown-actions/styles.shadow.css
+++ b/bricks/basic/src/dropdown-actions/styles.shadow.css
@@ -8,7 +8,7 @@
 
 eo-menu {
   padding: 2px;
-  border-radius: var(--larger-border-radius);
+  border-radius: 4px;
   background: var(--antd-dropdown-menu-bg);
   box-shadow: var(--antd-box-shadow-base);
   border: none;
