--- a/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
+++ b/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
@@ -8,18 +8,18 @@
 
 .menu-container {
   box-sizing: border-box;
-  background: var(--antd-app-submenu-bg);
+  background: var(--color-fill-global-bg-1);
   border: 1px solid var(--stroke-color-default);
   border-left: 0;
-  border-radius: 6px;
-  padding: 20px 12px;
+  border-radius: 0px;
+  padding: 20px 0px;
   height: 100%;
 
   .header {
     display: flex;
     gap: 10px;
     align-items: center;
-    font-size: 18px;
+    font-size: 16px;
     padding: 0 24px 16px 24px;
     line-height: 26px;
     color: var(--color-header-text);
@@ -32,6 +32,9 @@
       -webkit-line-clamp: 2;
       word-wrap: break-word;
     }
+  }
+  .content {
+    padding: 0 12px;
   }
 
   .menu-item,
