--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -35,9 +35,10 @@ eo-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 16px;
-  height: 16px;
-  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  color: rgb(87, 104, 156);
 }
 
 .menu-item-text {
