--- a/bricks/basic/src/sidebar/sidebar-menu-submenu/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-submenu/styles.shadow.css
@@ -32,9 +32,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 16px;
-  height: 16px;
-  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  color: rgb(87, 104, 156);
 }
 
 .menu-submenu-title-text {
