--- a/bricks/form/src/input/input.shadow.css
+++ b/bricks/form/src/input/input.shadow.css
@@ -41,7 +41,7 @@
   color: var(--text-color-default);
   background-color: var(--theme-gray-background);
   border: 1px solid var(--color-border-divider-line);
-  border-radius: var(--larger-border-radius);
+  border-radius: var(--antd-button-border-radius);
   transition: all 0.3s;
 }
 
@@ -70,7 +70,7 @@
   display: inline-flex;
   position: relative;
   padding: var(--input-affix-wrapper-padding);
-  border-radius: var(--larger-border-radius);
+  border-radius: var(--antd-button-border-radius);
   width: 100%;
   color: var(--text-color-default);
   background-color: var(--antd-input-bg);
