--- a/bricks/basic/src/avatar/styles.shadow.css
+++ b/bricks/basic/src/avatar/styles.shadow.css
@@ -68,12 +68,14 @@
   width: var(--avatar-size);
   height: var(--avatar-size);
   overflow: hidden;
+  vertical-align: middle;
 }
 
 .avatar-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  vertical-align: middle;
 }
 
 .avatar-text {
