--- a/bricks/advanced/src/table/table.shadow.css
+++ b/bricks/advanced/src/table/table.shadow.css
@@ -85,3 +85,12 @@ td.alignBottom {
   font-weight: normal;
   color: var(--antd-pagination-total-strong-text);
 }
+
+.ant-table-wrapper .ant-table-thead > tr > th {
+  padding: 11px 16px;
+  font-size: 12px;
+  line-height: 20px;
+  border-bottom: 0;
+  font-weight: 500;
+  color: var(--antd-table-header-color);
+}
