--- a/bricks/ui-test/src/preview-container/styles.shadow.css
+++ b/bricks/ui-test/src/preview-container/styles.shadow.css
@@ -1,28 +1,65 @@
-:host {
-  display: inline-block;
-}
-
-:host([hidden]) {
-  display: none;
+* {
+  box-sizing: border-box;
 }
 
 .preview-container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-shadow: 0 0 0 1px rgba(204, 204, 204, 0.2);
   border-radius: 4px;
-
-  .iframe {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    transform-origin: 0% 0%;
-    border: 0;
-    padding: 0;
-  }
 }
+
+.iframe {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  transform-origin: 0% 0%;
+  border: 0;
+  padding: 0;
+  border-radius: 4px;
+}
+
+.mask {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.outline {
+  position: absolute;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 0 4px 4px;
+  pointer-events: none;
+  border-color: rgba(var(--palette-blue-6-channel));
+}
+
+.preview-container:not(.inspecting) .outline {
+  display: none;
+}
+
+.label {
+  position: absolute;
+  left: -2px;
+  top: -20px;
+  height: 18px;
+  line-height: 16px;
+  padding: 2px 5px 0;
+  font-size: 12px;
+  border-radius: 4px 4px 0 0;
+  white-space: nowrap;
+  background: rgba(var(--palette-blue-6-channel));
+}
+
+/* .outline.overflowed-x {
+  border-radius: 4px 0 4px 4px;
+}
+
+.outline.overflowed-x .label {
+  left: auto;
+  right: -2px;
+} */
