--- a/bricks/basic/src/nav-menu/nav-menu.shadow.css
+++ b/bricks/basic/src/nav-menu/nav-menu.shadow.css
@@ -194,3 +194,13 @@ eo-menu-item[active] .menu-item-label {
 .three-level-menu-search-history-icon {
   margin-left: 5px;
 }
+
+.sub-menu-sit-map-wrapper {
+  width: calc(100vw);
+  max-height: calc(80vh);
+  background-color: var(--antd-dropdown-menu-bg);
+  border-radius: 6px;
+  box-shadow: 0px 4px 12px 0px rgba(17, 37, 64, 0.08);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
