--- a/bricks/basic/src/nav-menu/site-map/GroupItem.shadow.css
+++ b/bricks/basic/src/nav-menu/site-map/GroupItem.shadow.css
@@ -38,6 +38,7 @@
   .custom-content {
     .icon-wrapper {
       color: var(--color-secondary-text);
+      font-size: 16px;
       display: none;
       margin-left: auto;
     }
