--- a/bricks/basic/src/nav-menu/site-map/SiteMapItem.shadow.css
+++ b/bricks/basic/src/nav-menu/site-map/SiteMapItem.shadow.css
@@ -8,8 +8,7 @@
   .search-panel {
     .title {
       display: inline-block;
-      padding-left: 16px;
-      padding-right: 16px;
+      padding: 2px 16px;
       font-weight: 500;
       line-height: 24px;
       position: relative;
