--- a/bricks/nav/src/nav-menu/nav-menu.shadow.css
+++ b/bricks/nav/src/nav-menu/nav-menu.shadow.css
@@ -204,7 +204,7 @@ eo-menu-item[active] .menu-item-label {
   box-sizing: border-box;
   width: calc(100vw);
   padding: 0 120px 24px;
-  height: 520px;
+  max-height: 520px;
   background-color: var(--antd-dropdown-menu-bg);
   border-radius: 6px;
   box-shadow: 0px 4px 12px 0px rgba(17, 37, 64, 0.08);
