fix(): eo-user-or-user-group-select问题修复
Closes BRICK-50

--- a/bricks/form-platform/src/user-or-user-group-select/styles.shadow.css
+++ b/bricks/form-platform/src/user-or-user-group-select/styles.shadow.css
@@ -5,3 +5,10 @@
 :host([hidden]) {
   display: none;
 }
+.select-wrapper {
+  display: flex;
+  align-items: center;
+}
+eo-select {
+  width: 100%;
+}
