--- a/bricks/nav/src/launchpad/MyDesktop/MyDesktop.module.css
+++ b/bricks/nav/src/launchpad/MyDesktop/MyDesktop.module.css
@@ -67,6 +67,9 @@
   width: 100%;
   height: 200px;
   line-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .settingsContainer {
