--- a/bricks/presentational/src/descriptions/descriptions.shadow.css
+++ b/bricks/presentational/src/descriptions/descriptions.shadow.css
@@ -1,9 +1,31 @@
+:host {
+  display: block;
+  --blue-gray-1: #f0f7ff;
+}
+
+:host([hidden]) {
+  display: none;
+}
+
+:host-context(html[data-theme="dark-v2"]),
+:host-context([data-override-theme="dark-v2"]) {
+  --blue-gray-1: #1d1f28;
+}
+
 .description-content {
   padding: 0 16px;
 }
 
 .description-item {
   display: flex;
+}
+
+.description-item-label {
+  color: var(--antd-description-item-label-color);
+}
+
+.description-item-content {
+  color: var(--antd-description-item-content-color);
 }
 
 .description-item.horizontal {
@@ -52,5 +74,5 @@
 }
 
 .description-item.bordered > span:first-child {
-  background-color: var(--palette-gray-3);
+  background-color: var(--blue-gray-1);
 }
